#51 Set default Tumblr Blog Crawler Implementation
- Allows to define the default Tumblr Blog Crawler implementation used for scraping.
- Denies the addition of a Tumblr and a Tumblr Hidden Blog with the same address (i.e. a Tumblr API and Tumblr SVC blog)
- Fixes Tumblr blog deletion if the Tumblr crawler was changed from its original state/detection.

--- a/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
@@ -48,5 +48,7 @@
     <c:IsBlogInQueueMultiConverter x:Key="IsBlogInQueueMultiConverter" />
 
     <c:NullImageConverter x:Key="NullImageConverter" />
+    
+    <c:TumblrBlogCrawlerTypesConverter x:Key="TumblrBlogCrawlerTypesConverter" />
 
 </ResourceDictionary>
