--- a/src/TumblThree/TumblThree.Presentation/App.xaml
+++ b/src/TumblThree/TumblThree.Presentation/App.xaml
@@ -1,7 +1,9 @@
-﻿<Application x:Name="App" x:Class="TumblThree.Presentation.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             DispatcherUnhandledException="Application_DispatcherUnhandledException">
+﻿<Application
+    x:Class="TumblThree.Presentation.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    x:Name="App"
+    DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
