--- a/src/TumblThree/TumblThree.Presentation/Resources/BrushResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/BrushResources.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <SolidColorBrush x:Key="DefaultForeground" Color="{StaticResource {x:Static SystemColors.ControlTextColorKey}}" />
 
