--- a/src/TumblThree/TumblThree.Presentation/Resources/ControlResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ControlResources.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="Label">
         <Setter Property="Padding" Value="4,4" />
@@ -24,7 +23,10 @@
         <Setter Property="Height" Value="2" />
     </Style>
 
-    <Style x:Key="IconButtonStyle" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+    <Style
+        x:Key="IconButtonStyle"
+        BasedOn="{StaticResource {x:Type Button}}"
+        TargetType="Button">
         <Setter Property="Width" Value="40" />
         <Setter Property="Height" Value="37" />
         <Setter Property="Margin" Value="4,0" />
@@ -32,7 +34,10 @@
         <Setter Property="FontSize" Value="14" />
     </Style>
 
-    <Style x:Key="IconToggleButtonStyle" TargetType="ToggleButton" BasedOn="{StaticResource {x:Type ToggleButton}}">
+    <Style
+        x:Key="IconToggleButtonStyle"
+        BasedOn="{StaticResource {x:Type ToggleButton}}"
+        TargetType="ToggleButton">
         <Setter Property="Width" Value="40" />
         <Setter Property="Height" Value="37" />
         <Setter Property="Margin" Value="4,0" />
@@ -40,7 +45,10 @@
         <Setter Property="FontSize" Value="14" />
     </Style>
 
-    <Style x:Key="InplaceButtonStyle" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+    <Style
+        x:Key="InplaceButtonStyle"
+        BasedOn="{StaticResource {x:Type Button}}"
+        TargetType="Button">
         <Setter Property="FontFamily" Value="Segoe UI Symbol" />
         <Setter Property="FontSize" Value="11" />
         <Setter Property="BorderThickness" Value="0" />
@@ -49,11 +57,17 @@
         <Setter Property="Background" Value="Transparent" />
     </Style>
 
-    <Style x:Key="CloseButtonStyle" TargetType="Button" BasedOn="{StaticResource InplaceButtonStyle}">
+    <Style
+        x:Key="CloseButtonStyle"
+        BasedOn="{StaticResource InplaceButtonStyle}"
+        TargetType="Button">
         <Setter Property="Content" Value="&#xE10A;" />
     </Style>
 
-    <Style x:Key="AppBarTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+    <Style
+        x:Key="AppBarTextBlockStyle"
+        BasedOn="{StaticResource {x:Type TextBlock}}"
+        TargetType="TextBlock">
         <Setter Property="Padding" Value="3" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="VerticalAlignment" Value="Top" />
@@ -76,21 +90,40 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Grid>
-                        <Border BorderBrush="#FFCB2E2E" BorderThickness="1" Background="#11FF0000"
-                                IsHitTestVisible="False" x:Name="errorBorder" />
+                        <Border
+                            x:Name="errorBorder"
+                            Background="#11FF0000"
+                            BorderBrush="#FFCB2E2E"
+                            BorderThickness="1"
+                            IsHitTestVisible="False" />
                         <AdornedElementPlaceholder x:Name="placeholder" />
-                        <Popup AllowsTransparency="True" HorizontalAlignment="Right" HorizontalOffset="0"
-                               VerticalOffset="0" PopupAnimation="Fade" Placement="Right"
-                               PlacementTarget="{Binding ElementName=errorBorder}"
-                               IsOpen="{Binding ElementName=placeholder, Path=AdornedElement.IsFocused, Mode=OneWay}">
+                        <Popup
+                            HorizontalAlignment="Right"
+                            AllowsTransparency="True"
+                            HorizontalOffset="0"
+                            IsOpen="{Binding ElementName=placeholder, Path=AdornedElement.IsFocused, Mode=OneWay}"
+                            Placement="Right"
+                            PlacementTarget="{Binding ElementName=errorBorder}"
+                            PopupAnimation="Fade"
+                            VerticalOffset="0">
                             <StackPanel Orientation="Horizontal">
-                                <Polygon VerticalAlignment="Center" Points="0,4 4,0 4,8" Fill="#FFCB2E2E"
-                                         Stretch="Fill" Stroke="#FFCB2E2E"
-                                         StrokeThickness="2" />
-                                <Border Background="#FFCB2E2E" CornerRadius="4" Padding="4">
-                                    <TextBlock HorizontalAlignment="Center" Foreground="White" FontWeight="Bold"
-                                               Margin="2,0,0,0"
-                                               Text="{Binding ElementName=placeholder, Path=AdornedElement.ToolTip, Mode=OneWay}" />
+                                <Polygon
+                                    VerticalAlignment="Center"
+                                    Fill="#FFCB2E2E"
+                                    Points="0,4 4,0 4,8"
+                                    Stretch="Fill"
+                                    Stroke="#FFCB2E2E"
+                                    StrokeThickness="2" />
+                                <Border
+                                    Padding="4"
+                                    Background="#FFCB2E2E"
+                                    CornerRadius="4">
+                                    <TextBlock
+                                        Margin="2,0,0,0"
+                                        HorizontalAlignment="Center"
+                                        FontWeight="Bold"
+                                        Foreground="White"
+                                        Text="{Binding ElementName=placeholder, Path=AdornedElement.ToolTip, Mode=OneWay}" />
                                 </Border>
                             </StackPanel>
                         </Popup>
@@ -100,22 +133,22 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="ToolTip"
-                        Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="VerticalSeparatorStyle" 
-       TargetType="{x:Type Separator}"
-       BasedOn="{StaticResource {x:Type Separator}}">
-        <Setter Property="Margin" Value="6,0,6,0"/>
+    <Style
+        x:Key="VerticalSeparatorStyle"
+        BasedOn="{StaticResource {x:Type Separator}}"
+        TargetType="{x:Type Separator}">
+        <Setter Property="Margin" Value="6,0,6,0" />
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <TransformGroup>
                     <TransformGroup.Children>
                         <TransformCollection>
-                            <RotateTransform Angle="90"/>
+                            <RotateTransform Angle="90" />
                         </TransformCollection>
                     </TransformGroup.Children>
                 </TransformGroup>
