--- a/src/TumblThree/TumblThree.Presentation/Resources/LayoutResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/LayoutResources.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <GridLength x:Key="Layout.ColumnSpace">7</GridLength>
 
@@ -10,7 +9,7 @@
     <GridLength x:Key="Layout.LargeRowSpace">9</GridLength>
 
     <Style TargetType="ComboBoxItem">
-        <Setter Property="Padding" Value="2"/>
+        <Setter Property="Padding" Value="2" />
     </Style>
 
 </ResourceDictionary>
