--- a/src/TumblThree/TumblThree.Presentation/Themes/Generic.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Themes/Generic.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/TumblThree;Component/Themes/Generic/Rating.xaml" />
