--- a/src/TumblThree/TumblThree.Presentation/Themes/Generic/Rating.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Themes/Generic/Rating.xaml
@@ -1,6 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ctrl="clr-namespace:TumblThree.Presentation.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ctrl="clr-namespace:TumblThree.Presentation.Controls">
 
     <Style TargetType="ctrl:RatingItem">
         <Setter Property="BorderBrush" Value="#FF545454" />
@@ -10,15 +11,21 @@
                     <Grid Background="{TemplateBinding Background}">
                         <Rectangle Fill="Transparent" IsHitTestVisible="True" />
 
-                        <Path x:Name="item" Fill="White" Stretch="Uniform" Stroke="{TemplateBinding BorderBrush}"
-                              StrokeLineJoin="Round"
-                              Margin="{Binding Padding, RelativeSource={RelativeSource AncestorType={x:Type ctrl:Rating}}}"
-                              StrokeThickness="0.4" VerticalAlignment="Stretch" Opacity="1"
-                              Data="M15,0 L18.6,11.373603 L30,11.459046 L20.824955,18.573566 L24.270519,30 L15,23.023449 L5.7294912,30 L9.1750822,18.573566 L0,11.459046 L11.399999,11.373603 z" />
+                        <Path
+                            x:Name="item"
+                            Margin="{Binding Padding, RelativeSource={RelativeSource AncestorType={x:Type ctrl:Rating}}}"
+                            VerticalAlignment="Stretch"
+                            Data="M15,0 L18.6,11.373603 L30,11.459046 L20.824955,18.573566 L24.270519,30 L15,23.023449 L5.7294912,30 L9.1750822,18.573566 L0,11.459046 L11.399999,11.373603 z"
+                            Fill="White"
+                            Opacity="1"
+                            Stretch="Uniform"
+                            Stroke="{TemplateBinding BorderBrush}"
+                            StrokeLineJoin="Round"
+                            StrokeThickness="0.4" />
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="RatingItemState" Value="Filled">
-                            <Setter Property="Fill" TargetName="item" Value="Black" />
+                            <Setter TargetName="item" Property="Fill" Value="Black" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -31,9 +38,12 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ctrl:Rating}">
-                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                    <Border
+                        x:Name="border"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True">
                         <ItemsControl x:Name="PART_RatingItems">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
