Add issue #103 New column with timestamp of latest post
- It's difficult to see in the blog list, if a blog is stale. The column "Last Complete Crawl" isn't helpful for that. It only shows the last time the crawler run, whether there has been fresh content downloaded or not.
- Added another column that shows the timestamp of the most recent blog post.

--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -150,6 +150,10 @@
                                     Binding="{Binding LastCompleteCrawl, Converter={StaticResource DateToDisplayValueConverter}}"
                                     IsReadOnly="True" Width="120"
                                     ElementStyle="{StaticResource TextCellElementStyle}" />
+                <DataGridTextColumn x:Name="latestPostColumn" Header="{x:Static p:Resources.LatestPost}"
+                                    Binding="{Binding LatestPost, Converter={StaticResource DateToDisplayValueConverter}}"
+                                    IsReadOnly="True" Width="120"
+                                    ElementStyle="{StaticResource TextCellElementStyle}" />
                 <DataGridTemplateColumn x:Name="ratingColumn" Header="{x:Static p:Resources.Rating}"
                                         SortMemberPath="Rating" Width="110">
                     <DataGridTemplateColumn.CellTemplate>
