--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
@@ -240,6 +240,8 @@
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                             </Grid.RowDefinitions>
                             <Label
                                 Grid.Row="0"
@@ -457,6 +459,9 @@
                                 Content="{x:Static p:Resources.SkipGif}"
                                 IsChecked="{Binding BlogFile.SkipGif, Mode=TwoWay}" />
 
+                            <CheckBox Content="{x:Static p:Resources.GroupPhotoSets}" IsChecked="{Binding BlogFile.GroupPhotoSets, Mode=TwoWay}"
+                                Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Margin="3,0,0,0" Padding="3,0,0,0" />
+
                             <!--<CheckBox Content="{x:Static p:Resources.CheckDirectoryForFiles}"
                                   IsChecked="{Binding BlogFile.CheckDirectoryForFiles, Mode=TwoWay}" Grid.Column="0" Grid.ColumnSpan="2"
                                   Grid.Row="12" Margin="3,0,0,0" Padding="3,0,0,0">
@@ -473,7 +478,7 @@
                         </CheckBox>-->
 
                             <CheckBox
-                                Grid.Row="12"
+                                Grid.Row="14"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
                                 Margin="3,0,0,0"
@@ -491,7 +496,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="14"
+                                Grid.Row="16"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -509,7 +514,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="16"
+                                Grid.Row="18"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -527,7 +532,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="18"
+                                Grid.Row="20"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -545,7 +550,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="20"
+                                Grid.Row="22"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
