--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
@@ -10,12 +10,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:p="clr-namespace:TumblThree.Presentation.Properties"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    d:DataContext="{d:DesignInstance dd:SampleDetailsViewModel,
-                                     IsDesignTimeCreatable=True}"
+    d:DataContext="{d:DesignInstance dd:SampleDetailsViewModel, IsDesignTimeCreatable=True}"
     d:DesignHeight="640"
     d:DesignWidth="400"
     Background="{StaticResource DefaultBackground}"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    LostFocus="View_LostFocus">
 
     <Grid>
         <Grid.Resources>
