Add issue #121 Option "Download url list" renamed
- Without reading the tooltip the option text "Download url list" doesn't make clear that no binary files will be downloaded.
- Changed the option text to "Save url list (no audio/image/video downloads)" to make it more clear.

--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
@@ -480,10 +480,10 @@
                             <CheckBox
                                 Grid.Row="14"
                                 Grid.Column="0"
-                                Grid.ColumnSpan="2"
+                                Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
                                 Padding="3,0,0,0"
-                                Content="{x:Static p:Resources.DownloadUrlList}"
+                                Content="{x:Static p:Resources.DownloadUrlList2}"
                                 IsChecked="{Binding BlogFile.DownloadUrlList, Mode=TwoWay}">
                                 <CheckBox.ToolTip>
                                     <ToolTip>
